--- a/articles/templates/articles/article_create.html
+++ b/articles/templates/articles/article_create.html
@@ -1,13 +1,34 @@
 {% extends 'base_layout.html'%}
 
-
 {% block content %}
-<div class="create-article">
-  <h1>Create Awesome Article</h1>
-  <form class="site-form" action="{% url 'articles:create'%}" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{form}}
-    <input type="submit" value="Create">
-  </form>
+<div class="jumbotron jumbotron-fluid text-dark">
+  <div class="container">
+    <div class="content-section">
+      <form action="{% url 'articles:create'%}" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4 text-center"><h1>Create Awesome Article</h1></legend>
+            <label for="id_title">Title:</label>
+            <input class="form-control" placeholder="Enter title" type="text" name="title" required id="id_title" maxlength="100"><br>
+            <label for="id_slug">Slug:</label>
+            <input class="form-control" placeholder="Slug" type="text" name="slug" required id="id_slug" maxlength="50"><br>
+            <label for="id_text">Text:</label>
+            <textarea class="form-control" placeholder="Type text.." name="text" required id="id_text" rows="10" spellcheck="false"></textarea><br>
+            <label for="id_thumb">Thumb:</label><br>
+            <input type="file" name="thumb" id="id_thumb" accept="image/*">
+        </fieldset>
+        <!-- <input type="submit" value="Create"> -->
+        <div class="form-group">
+            <button class="btn btn-dark" type="submit" value="Create">Create</button>
+        </div>
+      </form>
+      <div class="border-top pt-3 text-center">
+          <small class="text-muted">
+              You Are Great
+          </small>
+      </div>
+    </div>
+  </div>
 </div>
+<script src="/assets/slug.js">alert("Hello\nHow are you?");</script>
 {% endblock %}
