--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 body{
-  background-color: #0f121f;
-  background-image: url(stars.jfif);
+  /* background-color: #0f121f; */
+  /* background-image: url(stars.jfif); */
   color : #fff;
 }
 
