--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -3,47 +3,49 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Article</title>
-    <link rel="stylesheet" href="{% static 'faltu.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+
+    <title>Home</title>
   </head>
   <body>
-    <header  class="wrapper">
-        <!-- <h2><a href="{% url 'articles:articles_list' %}" class="link">Home</a></h2> -->
-        <nav>
-          <div class="wrapper">
-          <div class="home">
-            <h2><a href="{% url 'articles:articles_list' %}" class="home">Home</a></h2>
+    <header class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand font-weight-bold" href="{% url 'articles:articles_list' %}"><i class="fas fa-file"></i> Django WebApp</a>
+      <div class="navbar-nav-scroll">
+        <ul class="navbar-nav bd-navbar-nav flex-row">
+          <li class="nav-item">
+            <a href="{% url 'articles:articles_list' %}" class="nav-link text-white"><i class="fas fa-home"></i> Home</a>
+          </li>
+          <li>
+            <a href="{% url 'articles:create' %}", class="nav-link text-white">New Article</a>
+          </li>
+        </ul>
+      </div>
+      <ul class="navbar-nav ml-sm-auto ">
+        {% if user.is_authenticated %}
+        <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{user.username}}</a>
+          <div class="dropdown-menu bg-dark dropdown-menu-right">
+            <a href="{% url 'accounts:profile' username=user.username%}" class="dropdown-item">{{user.username}}</a>
+            <!-- <a href="#" class="dropdown-item">Setting</a> -->
+            <div class="dropdown-divider"></div>
+            <a href="{% url 'accounts:logout' %}" class="dropdown-item font-weight">Log Out</a>
           </div>
-          <div class="large">
-
-          </div>
-          <div class="heighlight">
-              <a href="{% url 'articles:create' %}", class="highlight">New Article</a>
-          </div>
-            {% if user.is_authenticated%}
-            <div class="logout-link">
-              <form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
-                {% csrf_token%}
-                <button type="submit">logout</button>
-              </form>
-            </div>
-            <div class="Profile">
-                <p><a href="{% url 'accounts:profile' username=user.username%}">{{user.username}}</a></p>
-            </div>
-            {% else %}
-            <div class="login-link">
-              <a href="{% url 'accounts:login' %}">login</a>
-            </div>
-            <div class="signup-link">
-              <a href="{% url 'accounts:signup' %}">signup</a>
-            </div>
-            {% endif %}
-          </div>
-        </nav>
+        </div>
+        {% else %}
+        <a href="{% url 'accounts:login' %}" class="dropdown-item font-weight">login</a>
+        <a href="{% url 'accounts:signup' %}" class="dropdown-item font-weight">signup</a>
+        {% endif %}
+      </ul>
     </header>
-    <div class="wrapper">
-      {% block content %}
-      {% endblock %}
-    </div>
+    {% block content %}
+    {% endblock %}
+    <footer class="jumbotron jumbotron-fluid bg-dark">
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
