--- a/accounts/templates/accounts/signup_view.html
+++ b/accounts/templates/accounts/signup_view.html
@@ -16,7 +16,7 @@
                 {{ profile_form|crispy}}
             </fieldset>
               <div class="form-group">
-                <button class="btn  btn-dark" type="submit" value="signup">Sign Up</button>
+                <button class="btn  btn-outline-success" type="submit" value="signup">Sign Up</button>
               </div>
           </form>
           <div class="border-top pt-3 ">
