--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,10 +1,17 @@
 {% extends 'base_layout.html'%}
 {% block content %}
 <main role="main" class="container">
-  <div class="jumbotron">
+  <div >
     <h1>Welcome to Interview Helper </h1>
-    <p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll, it will remain fixed to the top of your browser's viewport.</p>
-    <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">View navbar docs &raquo;</a>
+    <p class="lead">This is for your help to clear the any company coding round.</p>
+    <p> Here you can do the following things.</p>
+    <ul>
+      <li>You can read any Article realted Data Structure and Algorithms.</li>
+      <li>You can read any article of a particular user by going to their profiles.</li>
+      <li>You can search any Algorithms.</li>
+      <li>You make request for answer of any coding realted questions.</li>
+      <li>You can write any article ralated to Data structure and Algorithms.</li>
+    </ul>
   </div>
 </main>
 {% endblock %}
