--- a/accounts/templates/accounts/login_view.html
+++ b/accounts/templates/accounts/login_view.html
@@ -17,7 +17,7 @@
                 {% if request.GET.next %}
                 <button class="btn btn-dark " type="hidden" name='next' value="{{request.GET.next}}">Login</button>
                 {% else %}
-                <button class="btn  btn-dark" type="submit" value="login">Login</button>
+                <button class="btn  btn-outline-success" type="submit" value="login">Login</button>
                 {% endif %}
               </div>
           </form>
