--- a/articles/templates/articles/article_create.html
+++ b/articles/templates/articles/article_create.html
@@ -10,7 +10,7 @@
        <legend class="border-bottom mb-4 text-center"><h1>Create Awesome Article </h1></legend>
         {{ form|crispy}}
         <div class="form-group">
-            <button class="btn btn-dark" type="submit" value="Create">Create</button>
+            <button class="btn btn-outline-success" type="submit" value="Create">Create</button>
         </div>
     </form>
   </div>
