--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+  <!-- <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors"> -->
   <meta name="generator" content="Jekyll v3.8.6">
   <title>{% block head_title %}{% endblock %} Interview Helper</title>
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
