--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -10,7 +10,7 @@
         <ul class="list-unstyled">
         <li >
           <div class="row">
-            <div class="col-sm-3 bg-dark">
+            <div class="col-sm-3">
               <img style="hegiht:75px; width:75px;" class="mr-3"
               src="{{profile.profile_pic.url}}"
               alt="{{profile.user.username}}">
@@ -27,16 +27,16 @@
         </li>
         <hr>
         <li>
-          <!-- <div class="row"> -->
-            <div class="col-sm-5"><strong>Name</strong></div>
+          <div class="row">
+            <div class="col-sm-6"><strong>Name</strong></div>
             <div class="col-sm-4">
               <small>{{profile.first_name}} {{profile.last_name}}</small>
             </div>
-          <!-- </div> -->
+          </div>
         </li>
         <li>
           <div class="row">
-            <div class="col-sm-5"><strong>Country</strong></div>
+            <div class="col-sm-6"><strong>Country</strong></div>
             <div class="col-sm-4">
               <small>{{profile.country}}</small>
             </div>
