--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -4,8 +4,8 @@
 {% block activelis %}active{% endblock%}
 {% block content %}
 <div class="container text-center tex-dark">
-  <h1 >Article List</h1>
-  <br>
+  <h1 >Articles</h1>
+  <hr>
   {% for article in articles %}
   <div class="row">
     <div class="col-lg"></div>
