--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -30,6 +30,16 @@
           <a href="{% url 'articles:create' %}" class="nav-link"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>
             New Article</a>
         </li>
+        <li class="nav-item">
+          <a href="{% url 'meetings:requestmeet' %}" class="nav-link"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+           Mock Interview</a>
+        </li>
+        {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a href="{% url 'meetings:listrequestmeet' %}" class="nav-link">
+            Mock Interviews</a>
+        </li>
+        {% endif %}
       </ul>
       <form class="form-inline mt-2 mt-md-0" method="get" action="/search/">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" name="query" aria-label="Search" id="query">
