add mock interviewer service

--- a/templates/meetings/list_meet_request.html
+++ b/templates/meetings/list_meet_request.html
@@ -1,5 +1,6 @@
 {% extends 'base_layout.html'%}
 {% load static%}
+{% block list_meet %}active{% endblock %}
 {% block content %}
 <div class="container text-center tex-dark">
     <h1>Mock Interviews</h1>
