--- a/templates/articles/article_details.html
+++ b/templates/articles/article_details.html
@@ -23,7 +23,7 @@
     </a>
     <br>
 </p>
-    <!-- Modal -->
+    
     <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -101,10 +101,9 @@
 {% block js%}
 <script>
   $('#editModal').on('show.bs.modal', function (event) {
-  var button = $(event.relatedTarget) // Button that triggered the modal
-  var content = button.data('content') // Extract info from data-* attributes
-  // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
-  // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+  var button = $(event.relatedTarget) 
+  var content = button.data('content') 
+  
   var modal = $(this)
   modal.find('.modal-title').text(content)
   modal.find('.modal-body p').text('Are you sure you want to ' + content + ' ?')
