--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -30,12 +30,12 @@
           <a href="{% url 'articles:create' %}" class="nav-link"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>
             New Article</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item {% block meet_request %}{% endblock%}">
           <a href="{% url 'meetings:requestmeet' %}" class="nav-link"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>
            Mock Interview</a>
         </li>
         {% if user.is_authenticated %}
-        <li class="nav-item">
+        <li class="nav-item {% block list_meet %}{% endblock %}">
           <a href="{% url 'meetings:listrequestmeet' %}" class="nav-link">
             Mock Interviews</a>
         </li>
