--- a/templates/meetings/meet_request.html
+++ b/templates/meetings/meet_request.html
@@ -1,7 +1,7 @@
 {% extends 'base_layout.html'%}
 {% load static from staticfiles %}
 {% load crispy_forms_tags %}
-{% block activenew %}active{% endblock%}
+{% block meet_request %}active{% endblock%}
 {% block content %}
 <div class="container">
     <div class="content-section">
