--- a/templates/meetings/list_meet_request.html
+++ b/templates/meetings/list_meet_request.html
@@ -13,6 +13,7 @@
             <div class="card text-center">
                 <div class="card-body">
                     <div class="card-text preview" style="overflow:auto; height:100%; width:100%;">
+                        <p><b>{{meeting.type_of_meeting}}</b></p>
                         <p><a href={{meeting.resume_link}} target="_blank">Resume Link</a></p>
                         <p><a href={{meeting.linkdein_profile}} target="_blank">Linkedin Profile</a></p>
                         <p>Requested at {{meeting.addition_time}}</p>
