fix static template issue

--- a/templates/meetings/meet_request.html
+++ b/templates/meetings/meet_request.html
@@ -1,5 +1,5 @@
 {% extends 'base_layout.html'%}
-{% load static from staticfiles %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block meet_request %}active{% endblock%}
 {% block content %}
