--- a/templates/articles/article_create.html
+++ b/templates/articles/article_create.html
@@ -1,5 +1,5 @@
 {% extends 'base_layout.html'%}
-{% load static from staticfiles %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block activenew %}active{% endblock%}
 {% block content %}
